fixed the issues with not aligned-moving chat text input

--- a/sass/app/_chat.scss
+++ b/sass/app/_chat.scss
@@ -1,4 +1,3 @@
-
 #chat {
   position: fixed;
   right: 0;
@@ -6,6 +5,7 @@
   z-index: 1000;
   height: 80%;
   min-height: 300px;
+  // position: relative;
 
   #chat-btn {
     position: absolute;
@@ -22,6 +22,7 @@
     border-bottom-left-radius: 15px;
     background-color: #1dc8b6;
     border-right: 3px solid #1dc8b6;
+
     &:hover {
       cursor: pointer;
       color: $brown;
@@ -39,7 +40,6 @@
       margin-left: 6px;
       margin-top: 46px;
     }
-
   }
 
   #chat-content {
@@ -56,8 +56,6 @@
     box-shadow:         0 0 0 3px $brown;
     overflow-y: scroll;
     overflow-x: hidden;
-    position: relative;
-
 
     .chat-separator {
       //display: table-caption;
@@ -66,7 +64,7 @@
         text-align: center;
         background-color: $chatBg;
         padding: 0 5px;
-        position: absolute;
+        position: relative;
         min-width: 140px;
         margin: -8px auto auto 50%;
         left: -70px;
@@ -74,7 +72,7 @@
         font-weight: bold;
       }
       hr {
-        margin: 18px 28px;
+        margin: -10px 28px 18px 28px;
         padding: 0 40px;
         border: none;
         border-bottom: 1px solid #833c11;
@@ -87,9 +85,10 @@
     .message {
       padding: 0 20px;
       clear: both;
+      position: relative;
 
       .chatCloud{
-       background-color: $white;
+        background-color: $white;
         -webkit-border-radius: 20px;
         -moz-border-radius: 20px;
         border-radius: 20px;
@@ -102,33 +101,33 @@
         -webkit-box-shadow: 2px 2px 2px $brown;
         box-shadow:         2px 2px 2px $brown;
 
-          h5{
-            line-height: 10px;
-            font-weight: bold;
-          }
-          .name{
-            float:left;
-            color: $turq;
-          }
-          .time{
-            float:right;
-            color: $orange;
-            margin-left: 10px;
-          }
-          p {
-            clear: both;
-          }
-      }
+        h5{
+          line-height: 10px;
+          font-weight: bold;
+        }
 
+        .name{
+          float:left;
+          color: $turq;
+        }
+
+        .time{
+          float:right;
+          color: $orange;
+          margin-left: 10px;
+        }
+
+        p {
+          clear: both;
+        }
+      }
     }
 
     .messageOther {
-
       .chatAvatar {
         margin-right: 14px;
         float: left;
       }
-
 
       .arrow {
         border-right: 8px solid $white;
@@ -138,27 +137,23 @@
         margin: 20px 0 0 56px;
       }
 
-
-      .chatCloud{
+      .chatCloud {
         float: left;
       }
-
     }
 
     .messageOwn {
-
       .chatAvatar {
         margin-left: 14px;
         float: right;
       }
 
-
       .arrow {
-/*        border-left: 8px solid $white;
+        /* border-left: 8px solid $white;
         border-bottom: 8px solid transparent;
         border-top: 8px solid transparent;*/
         position:absolute;
-        margin: 20px 0 0 278px;
+        margin: 20px 0 0 282px;
         -moz-box-shadow:    2px 2px 1px -1px $brown;
         -webkit-box-shadow: 2px 2px 1px -1px $brown;
         box-shadow:         2px 2px 1px -1px $brown;
@@ -170,34 +165,36 @@
         -webkit-transform: matrix(1, -1, 1, 1, -7, 0); /* Safari and Chrome */
       }
 
-
       .chatCloud{
         float: right;
       }
-
     }
-    .input-area{
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      padding-top: 10px;
-      background-color: $offwhite;
-      /*border-top: 1px solid $brown;*/
-      #messageField{
-        margin-left: 10px;
-        float: left;
-        width: 277px;
-      }
-      button{
-        margin: 0 0 0 10px;
+  }
+  .input-area{
+    position: absolute;
+    bottom: 13px;
+    left: 8px;
+    width: 100%;
+    padding-top: 10px;
+    background-color: $offwhite;
+    border: 1px solid $offwhite;
+    border-bottom-left-radius: 10px;
+    z-index: 20;
 
-      }
+    #messageField {
+      margin-left: 10px;
+      float: left;
+      width: 277px;
     }
 
-
-
+    button {
+      margin: 0 0 0 10px;
+    }
   }
 
-
-
+  #pusher {
+    height: 140px;
+    display: block;
+    width: 100%;
+  }
 }
