--- a/war/css/app.css
+++ b/war/css/app.css
@@ -6346,7 +6346,6 @@ ul.nav-tabs-app li span.icomoon {
   box-shadow: 0 0 0 3px #833c11;
   overflow-y: scroll;
   overflow-x: hidden;
-  position: relative;
 }
 #chat #chat-content .chat-separator {
   clear: both;
@@ -6355,7 +6354,7 @@ ul.nav-tabs-app li span.icomoon {
   text-align: center;
   background-color: #f5e6d8;
   padding: 0 5px;
-  position: absolute;
+  position: relative;
   min-width: 140px;
   margin: -8px auto auto 50%;
   left: -70px;
@@ -6363,7 +6362,7 @@ ul.nav-tabs-app li span.icomoon {
   font-weight: bold;
 }
 #chat #chat-content .chat-separator hr {
-  margin: 18px 28px;
+  margin: -10px 28px 18px 28px;
   padding: 0 40px;
   border: none;
   border-bottom: 1px solid #833c11;
@@ -6374,6 +6373,7 @@ ul.nav-tabs-app li span.icomoon {
 #chat #chat-content .message {
   padding: 0 20px;
   clear: both;
+  position: relative;
 }
 #chat #chat-content .message .chatCloud {
   background-color: white;
@@ -6424,11 +6424,11 @@ ul.nav-tabs-app li span.icomoon {
   float: right;
 }
 #chat #chat-content .messageOwn .arrow {
-  /*        border-left: 8px solid $white;
-          border-bottom: 8px solid transparent;
-          border-top: 8px solid transparent;*/
+  /* border-left: 8px solid $white;
+  border-bottom: 8px solid transparent;
+  border-top: 8px solid transparent;*/
   position: absolute;
-  margin: 20px 0 0 278px;
+  margin: 20px 0 0 282px;
   -moz-box-shadow: 2px 2px 1px -1px #833c11;
   -webkit-box-shadow: 2px 2px 1px -1px #833c11;
   box-shadow: 2px 2px 1px -1px #833c11;
@@ -6444,21 +6444,29 @@ ul.nav-tabs-app li span.icomoon {
 #chat #chat-content .messageOwn .chatCloud {
   float: right;
 }
-#chat #chat-content .input-area {
+#chat .input-area {
   position: absolute;
-  bottom: 0;
+  bottom: 13px;
+  left: 8px;
   width: 100%;
   padding-top: 10px;
   background-color: floralwhite;
-  /*border-top: 1px solid $brown;*/
+  border: 1px solid floralwhite;
+  border-bottom-left-radius: 10px;
+  z-index: 20;
 }
-#chat #chat-content .input-area #messageField {
+#chat .input-area #messageField {
   margin-left: 10px;
   float: left;
   width: 277px;
 }
-#chat #chat-content .input-area button {
+#chat .input-area button {
   margin: 0 0 0 10px;
+}
+#chat #pusher {
+  height: 140px;
+  display: block;
+  width: 100%;
 }
 
 #timeline-controls {
